--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ d:
   # this way the overall test time gets cut down (GDC/LDC are a lot
   # slower tham DMD, so they should be started early), while still
   # catching most DMD version related build failures early
+  - dmd-2.084.1
   - dmd-2.082.0
   - dmd-2.080.1
   - ldc-1.11.0
