--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,9 @@ platform: x64
 environment:
  matrix:
   - DC: dmd
+    DVersion: 2.084.1
+    arch: x64
+  - DC: dmd
     DVersion: 2.082.0
     arch: x64
   - DC: dmd
