Fix running the Windows CI jobs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,6 +90,7 @@ jobs:
           compiler: ${{ matrix.dc }}
 
     - name: '[POSIX] Run tests'
+      shell: bash
       env:
         PARTS: ${{ matrix.parts }}
       run: |
